NULL =

SUBDIRS =			\
	ipa-cldap		\
	ipa-enrollment		\
	ipa-lockout		\
	ipa-modrdn		\
	ipa-pwd-extop		\
	ipa-extdom-extop	\
	ipa-uuid		\
	ipa-version		\
	ipa-winsync		\
	ipa-sidgen		\
	ipa-range-check		\
	$(NULL)

EXTRA_DIST =			\
	README			\
	$(NULL)

MAINTAINERCLEANFILES =		\
	*~			\
	Makefile.in
