NULL =

SUBDIRS =			\
	libotp			\
	ipa-cldap		\
	ipa-dns			\
	ipa-enrollment		\
	ipa-lockout		\
	ipa-modrdn		\
	ipa-otp-counter		\
	ipa-otp-lasttoken	\
	ipa-pwd-extop		\
	ipa-extdom-extop	\
	ipa-uuid		\
	ipa-version		\
	ipa-winsync		\
	ipa-sidgen		\
	ipa-range-check		\
	topology		\
	$(NULL)

noinst_HEADERS =		\
	common/util.h

EXTRA_DIST =			\
	README			\
	$(NULL)
